Actualización de Plugin y métodos para la versión 1.8